added a h2 under the h1

--- a/project.html
+++ b/project.html
@@ -19,6 +19,7 @@
         <img src="Shopping.jpg" alt="Official Logo for Trixia" title="Official logo for Trixia Co-operations">
         <header>
         <h1 id="h1">Welcome to Trixia</h1>
+        <h2>Shop with us</h2>
             <div></div>
             <a href="">Home</a>
             <a href="">About us</a>
