https://github.com/Casey-ctrl/webshopping.git

--- a/project.html
+++ b/project.html
@@ -19,7 +19,7 @@
         <img src="Shopping.jpg" alt="Official Logo for Trixia" title="Official logo for Trixia Co-operations">
         <header>
         <h1 id="h1">Welcome to Trixia</h1>
-        <h2>Shop with us</h2>
+        <h2>shopping with us</h2>
             <div></div>
             <a href="">Home</a>
             <a href="">About us</a>
@@ -51,6 +51,26 @@
                 <input type="submit">
             </form>
             </div>
+            <caption id="caption">Prices Tag</caption>
+            <table>
+             
+                <th>Name</th>
+                <th>Products</th>
+                <th>Price</th>
+             
+              <tr>
+                <td>Sneakers</td>
+                <td>Nike Jordans</td>
+                <td>100.99</td>
+              </tr>
+              <tr>
+
+                <td>T-shirts</td>
+                <td>Versace</td>
+                <td>99</td>
+              </tr>
+            </table>
+
         </main>
 
         <footer>
@@ -65,6 +85,6 @@
 
         </footer>
 
-        <script src="index.js"></script>
+        <script src="project.js"></script>
     </body>
 </html>
