--- a/project.html
+++ b/project.html
@@ -19,7 +19,7 @@
         <img src="Shopping.jpg" alt="Official Logo for Trixia" title="Official logo for Trixia Co-operations">
         <header>
         <h1 id="h1">Welcome to Trixia</h1>
-        <h2>shopping with us</h2>
+        <h2>Shopping with Trixia</h2>
             <div></div>
             <a href="">Home</a>
             <a href="">About us</a>
